Progress on EIVAR derivations for posterior approx.

--- a/framework_calibrating_ecosystem_models.bib
+++ b/framework_calibrating_ecosystem_models.bib
@@ -496,6 +496,15 @@ doi = {10.1080/00401706.2014.881749}
       primaryClass={stat.ME}
 }
 
+% TODO: need to read 
+@misc{koermer2023active,
+      title={Active Learning for Simulator Calibration}, 
+      author={Scott Koermer and Justin Loda and Aaron Noble and Robert B. Gramacy},
+      year={2023},
+      eprint={2301.10228},
+      archivePrefix={arXiv},
+      primaryClass={stat.ME}
+}
 
 
 
